k8s/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 32000
  selector:
    app: grafana
